--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,8 +4,8 @@
     <style name="Theme.GithubUserCompose" parent="android:Theme.Material.Light.NoActionBar" />
 
     <style name="Theme.GithubUserCompose.Splash" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/black</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/github_logo</item>
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="android:windowBackground">@drawable/splash_background</item>
         <item name="postSplashScreenTheme">@style/Theme.GithubUserCompose</item>
     </style>
 </resources>
